# Squeezer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
contextsqueezer/: __init__.py  _worker.py  cli.py  config.py
contextsqueezer/compressors/: ast_compactor.py  call_graph_pruner.py  file_version_tracker.py  json_crusher.py  linguistic_minifier.py  lsh_deduplicator.py  shell_sandbox.py  temporal_decay.py
contextsqueezer/dashboard/: server.py
contextsqueezer/eval/: harness.py
contextsqueezer/eval/fixtures/: sample_coding_session.jsonl
contextsqueezer/pipeline/: budget_governor.py  cache_aligner.py  classifier.py  component_router.py  orchestrator.py
contextsqueezer/proxy/: server.py
contextsqueezer/security/: pii_scrubber.py
contextsqueezer/storage/: ccr.py  sqlite_store.py
tests/: test_ast_compactor.py  test_budget_governor.py  test_cache_aligner.py  test_ccr.py  test_classifier.py  test_component_router.py  test_dashboard_aggregation.py  test_file_version_tracker.py  test_json_crusher.py  test_linguistic_minifier.py  test_lsh_deduplicator.py  test_orchestrator_integration.py  test_pii_scrubber.py  test_shell_sandbox.py  test_temporal_decay.py
