[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextsqueezer"
version = "0.1.0"
description = "Zero-local-ML proxy that deterministically compresses LLM context payloads to reduce cost and maximize provider prompt-cache hits."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["llm", "context", "compression", "proxy", "ai", "tokens", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "tree-sitter>=0.20.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "python-Levenshtein>=0.25.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "mmh3>=4.1.0",
    "numpy>=1.26.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
squeezer = "contextsqueezer.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/contextsqueezer"
Repository = "https://github.com/your-org/contextsqueezer"
Issues = "https://github.com/your-org/contextsqueezer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextsqueezer*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
